# lqcc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  ROADMAP.md  SPEC.md  demo.capsule  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-testpypi.yml
docs/: ARCHITECTURE.md  AUTOMATION.md  CLI.md  FORMAT.md  USAGE.zh-CN.md
examples/: demo_chat.jsonl  demo_chat.md  demo_resume.md  notes.md  quickstart.sh
lqcc/: __init__.py  auto.py  automation.py  capsule.py  cli.py  codec.py  extract.py  text.py
reader-skill/: GUIDE.md  SKILL.md  SKILL.zh-CN.md
tests/: test_smoke.py
